<resources>
    <string name="app_name">Study Slime</string>
    <string name="Home_string">Home</string>
    <string name="Collections_string">Collections</string>
    <string name="Status_string">Status</string>
    <string name="Quit_string">Quit</string>
    <string name="Test_Button">Test</string>
    <string name="Initial_Time">00:00</string>
    <string name="Initial_Timer_Button">Start</string>
</resources>