<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:background="#E4FFF9"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <EditText
            android:id="@+id/countDown_text"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="80dp"
            android:text="@string/Initial_Time"
            android:gravity="center"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:digits="1234567890:"
            android:cursorVisible="false"
            android:background="@null" />

        <Button
            android:id="@+id/Timer_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:onClick="ClickTimerButton"
            android:background="#B5FBDD"
            android:text="@string/Initial_Timer_Button" />

        <TextView
            android:id="@+id/testData_text"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/Home_string"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:onClick="ClickButton"
            android:background="#B5FBDD"
            android:text="@string/Test_Button" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include
            layout="@layout/main_nav_drawer"/>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>